--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Retro Maze</h1>
     <p>Welcome to my developer website for my game Retro Ball Maze on the app store!</p>
+    <p>Please enjoy my very well designed website</p>
 </body>
 </html>
