--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1>Retro Maze</h1>
     <p>Welcome to my developer website for my game Retro Ball Maze on the app store!</p>
     <p>Please enjoy my very well designed website</p>
+    <p>Any questions about the game can be answered by emailing me at gibson.sibblet@gmail.com</p>
+    <p>Thank you for playing!!!</p>
 </body>
 </html>
